j'ai finis les correction du prof closes #1

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
             <input type="month" name="expiration" id="expiration" required><br>
 
             <label for="codeSecurite">CVC</label><br>
-            <input type="text" inputmode="numeric" id="codeSecurite" name="codeSecurite" placeholder="123" required><br>
+            <input type="text" inputmode="numeric" id="codeSecurite" name="codeSecurite" placeholder="1234" required pattern="[0-9]{4}"><br>
             
             <label for="titulaire">Titulaire de la carte</label><br>
             <input type="text" id="titulaire" name="titulaire" required>
