--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-
+    <title>Formulaire</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script defer src="js/script.js"></script>
 </head>
 
 <body>
