--- a/public/merci.html
+++ b/public/merci.html
@@ -3,12 +3,18 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Merci!</title>
 
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <p>l'association SPCA vous remercie de votre don!</p>
+    <header>
+        <h1 class="header_h1">Faites un Don</h1>
+        
+    </header>
+
+    <p class="p__merci">l'association SPA vous remercie de votre don!</p>
     
 </body>
 
